# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md  third-party
.github/workflows/: ci.yml
formatter_ex_lib/: CMakeLists.txt
solver/solver_lib/: solver.cpp
sources/: print.cpp
tests/: test1.cpp
